# soundtailor

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
doc/: Doxyfile
scripts/: .project  .pydevproject  bandlimited_impulse.py  check_style.py  extract_test_data.py  filter_chamberlin.py  filter_firstorderpolezero.py  filter_moog.py  filter_oversampler.py  filter_secondorderraw.py  filters_common.py  generator_blpulse.py  generator_blsawtooth.py  generator_blsquare.py  generator_bltriangle.py  generator_sawtoothdpw.py  generator_sin.py  generator_triangledpw.py  generators_common.py  modulator_adsd.py  modulators_common.py  rtoutput.py  utilities.py
soundtailor/: CMakeLists.txt
soundtailor/src/: CMakeLists.txt  common.h  configuration.h  maths.h  utilities.h
soundtailor/src/filters/: CMakeLists.txt  chamberlin.cc  chamberlin.h  chamberlin_oversampled.cc  chamberlin_oversampled.h  filter_base.h  firstorder_polefixedzero.cc  firstorder_polefixedzero.h  firstorder_polezero.cc  firstorder_polezero.h  gain.cc  gain.h  moog.cc  moog.h  moog_lowaliasnonlinear.cc  moog_lowaliasnonlinear.h  moog_lowaliasnonlinear_lowpassblock.cc  moog_lowaliasnonlinear_lowpassblock.h  moog_lowpassblock.cc  moog_lowpassblock.h  moog_oversampled.cc  moog_oversampled.h  oversampler.h  secondorder_raw.cc  secondorder_raw.h
soundtailor/src/generators/: CMakeLists.txt  blsawtooth_segment.inc  generator_base.h  generators_common.cc  generators_common.h  sawtooth_blit.cc  sawtooth_blit.h  sawtooth_dpw.cc  sawtooth_dpw.h  square_blit.cc  square_blit.h  triangle_dpw.cc  triangle_dpw.h
soundtailor/src/modulators/: CMakeLists.txt  adsd.cc  adsd.h  envelopgenerator_base.h  modulators_common.cc  modulators_common.h
soundtailor/src/platform/: CMakeLists.txt  maths_std.h  vectormaths_sse2.h  vectormaths_std.h
soundtailor/tests/: CMakeLists.txt  analysis.h  debug.h  main.cc  tests.cc  tests.h
soundtailor/tests/filters/: CMakeLists.txt  tests_chamberlin.cc  tests_chamberlin_oversampled.cc  tests_filters.cc  tests_filters_fixture.h  tests_firstorder_polezero.cc  tests_moog.cc  tests_moog_lowaliasnonlinear.cc  tests_moog_lowaliasnonlinearlowpassblock.cc  tests_moog_oversampled.cc  tests_mooglowpassblock.cc  tests_oversampler.cc  tests_secondorder_raw.cc
soundtailor/tests/generators/: CMakeLists.txt  tests_generators.cc  tests_generators_common.cc  tests_generators_fixture.h  tests_sawtooth_dpw.cc  tests_triangle_dpw.cc
soundtailor/tests/modulators/: CMakeLists.txt  tests_adsd.cc  tests_modulators.cc  tests_modulators_fixture.h
